grammar.js
    module: ($) => repeat($._statement),

    _statement: ($) => choice($._simple_statements, $._compound_statement),

    // Simple statements

    import_statement: ($) => seq('import', $._import_list),

    import_prefix: (_) => repeat1('.'),

    relative_import: ($) => seq($.import_prefix, optional($.dotted_name)),

    _import_list: ($) =>
      seq(
        commaSep1(field('name', choice(
          $.dotted_name,
          // A relative import using `import`, e.g. `import .warp`.
          $.relative_import,
          $.aliased_import,
        ))),
        optional(','),
      ),

    assert_statement: ($) =>
      seq(optional('comptime'), 'assert', commaSep1($.expression)),

    return_statement: ($) => seq('return', optional($._expressions)),

    _expressions: ($) => choice($.expression, $.expression_list),

    pass_statement: (_) => prec.left('pass'),
    extension_definition: ($) =>
      seq(
        '__extension',
        field('name', choice($.identifier, $.generic_type)),
        ':',
        field('body', $._suite),
      ),

    // An MLIR region declaration, e.g.
    //   __mlir_region await_body(hdl: __mlir_type.`!co.routine`):
    //       body(hdl)
    mlir_region: ($) =>
      seq(
        '__mlir_region',
        field('name', $.identifier),
        field('parameters', $.parameters),
        ':',
        field('body', $._suite),
      ),

    // A compile-time control-flow statement, e.g. `comptime if ...:` or
    // `comptime for ... in ...:`.
    comptime_statement: ($) => seq(
      'comptime',
      choice($.if_statement, $.for_statement, $.while_statement),
    ),

    function_definition: ($) => seq(
      optional('async'),
      choice('def', 'fn'),
      field('name', $.identifier),
      field('type_parameters', optional($.type_parameter)),
      field('parameters', $.parameters),
      optional($.unified_clause),
      optional($._function_effects),
      optional($.result_convention),
      optional(
        seq(
          '->',
          optional($._ref_convention),
          field('return_type', $.type),
        ),
      ),
      repeat($.where_clause),
      ':',
      field('body', $._suite),
    ),

    // A brace-delimited capture/result convention preceding the return type,
    // e.g. `def f(...) {read} -> T:`. Each convention may bind a name, as in
    // `def f() {read x, mut y}:`.
    result_convention: ($) =>
      seq(
        '{',
        optional(seq(
          commaSep1(choice(
            seq($.identifier, optional('^')),
            seq($.argument_convention, optional($.identifier), optional('^')),
          )),
          optional(','),
        )),
        '}',
      ),

    // A function's effect qualifiers, e.g. `raises`, `capturing`, `thin`, or
    // combinations like `raises capturing`. `raises` may carry an optional
    // error type, bound greedily so a following `->`/`:`/`|`/`.` is treated as
    // part of the type when present.
    _function_effects: ($) => repeat1(choice(
      // A typed `raises` carries an optional error type. The error type is an
      // expression-level type (parametric `Errors[X]`, unioned `A | B`, dotted
      // `mod.Err`) but never a bare `constrained_type`, whose `:` would
      // otherwise swallow the function body colon in `def f() raises HALError:`.
      seq('raises', optional(field('raises_type', alias($._raises_type, $.type)))),
      // `capturing`/`escaping` may carry an origin list, e.g. `capturing[_]`.
      seq(choice('capturing', 'escaping'), optional($.capture_list)),
      'thin',
      // An ABI qualifier, e.g. `abi("C")`.
      $.abi_specifier,
    )),

    abi_specifier: ($) => seq('abi', '(', $.string, ')'),

    capture_list: ($) =>
      prec(PREC.call + 1,
        seq('[', commaSep1(choice($.expression, $.wildcard_origin)), optional(','), ']')),

    wildcard_origin: (_) => '_',

    parameters: ($) => seq(
      '(',
      optional($._parameters),
      ')',
    ),

    // Retain the legacy unparenthesized form accepted by the upstream grammar
    // without letting tuple/keyword-only parameter patterns compete with
    // current Mojo's parenthesized lambda signature and capture list.
    list_splat: ($) => seq(
      '*',
      $.expression,
    ),

    comptime_declaration: ($) => prec.right(seq(
      'comptime',
      field('name', $.identifier),
      field('type_parameters', optional($.type_parameter)),
      optional(seq(':', field('type', $.type))),
      optional($.where_clause),
      optional(seq('=', field('value', $._right_hand_side))),
    )),

    class_definition: ($) => seq(
      choice('class', 'struct'),
      field('name', $.identifier),
      field('type_parameters', optional($.type_parameter)),
      field(
        'superclasses',
        optional(alias($.superclass_list, $.argument_list)),
      ),
      optional($.where_clause),
      ':',
      field('body', $._suite),
    ),

    // A struct conformance list, like an argument list except each entry may
    // carry `where` constraints, e.g. `Copyable where conforms_to(T, Copyable)`.
    type_parameter: ($) => seq(
      '[',
      optional(seq(
        commaSep1(choice(
          $.infer_separator,
          $.keyword_separator,
          $.positional_separator,
          // Argument-convention soft keywords (`mut`, `out`) used as parameter
          // names or arguments, e.g. `mut: Bool`, `mut=mut`, or a bare `mut`.
          seq(
            alias(choice('mut', 'out'), $.identifier),
            optional(seq(':', field('type', $.type))),
            optional(seq('=', field('default', $._type_parameter_default))),
          ),
          seq(
            $.type,
            optional(seq('=', field('default', $._type_parameter_default))),
            repeat($.where_clause),
          ),
        )),
        optional(','),
      )),
      ']',
    ),

    // A type-parameter default may be any expression (covering parametric
    // instantiations and call chains like `Target[x].options()`), or a bare
    // convention keyword such as `mut` referencing an origin parameter.
    _type_parameter_default: ($) =>
      choice($.expression, alias(choice('mut', 'out'), $.identifier)),

    // The `//` marker separating infer-only parameters from explicit ones.
    infer_separator: (_) => '//',

    argument_list: ($) => seq(
      '(',
      optional(commaSep1(
        choice(
          $.expression,
          $.list_splat,
          $.dictionary_splat,
          alias($.parenthesized_list_splat, $.parenthesized_expression),
          $.keyword_argument,
        ),
      )),
      optional(','),
      ')',
    ),

    decorated_definition: ($) => seq(
      repeat1($.decorator),
      field('definition', choice(
        $.class_definition,
        $.function_definition,
        $.trait_definition,
        // A decorated comptime alias, e.g.
        //   @deprecated(use=ImplicitlyDeletable)
        //   comptime X = ImplicitlyDeletable
        seq($.assignment, $._newline),
        seq($.comptime_declaration, $._newline),
      )),
    ),

    if_statement: ($) =>
      seq(
        'if',
        field('condition', $.expression),
        ':',
        field('consequence', $._suite),
        repeat(field('alternative', $.elif_clause)),
        optional(field('alternative', $.else_clause)),
      ),

    for_statement: ($) =>
      seq(
        optional('async'),
        'for',
        // The loop variable may carry a convention, e.g. `for var arg in ...`
        // or `for ref item in ...`.
        optional($.argument_convention),
        field('left', $._left_hand_side),
        'in',
        field('right', $._expressions),
        ':',
        field('body', $._suite),
        field('alternative', optional($.else_clause)),
      ),

    decorator: ($) => seq('@', $.expression, $._newline),

    _suite: ($) =>
      choice(
        alias($._simple_statements, $.block),
        seq($._indent, $.block),
        alias($._newline, $.block),
      ),

    block: ($) => seq(repeat($._statement), $._dedent),

    dotted_name: ($) => prec(1, sep1($.identifier, '.')),

    // Match cases

    _parameters: ($) => seq(commaSep1($.parameter), optional(',')),

    convention_pattern: ($) =>
      seq($.argument_convention, field('name', $.identifier)),

    _ref_convention: ($) =>
      prec(1, seq('ref', '[', commaSep1($.expression), optional(','), ']')),
    argument_convention: ($) =>
      choice(
        'borrowed',
        'imm',
        'inout',
        'owned',
        'out',
        'read',
        'mut',
        'var',
        'deinit',
        'ref',
        $._ref_convention,
      ),

    where_clause: ($) => seq('where', $.expression),

    self_parameter: ($) =>
      prec.right(seq(
        optional($.argument_convention),
        SELF,
        optional(seq(':', field('type', $.type))),
      )),

    typed_parameter: ($) =>
      prec(
        PREC.typed_parameter,
        seq(
          seq(
            optional($.argument_convention),
            choice(
              $.identifier,
              $.list_splat_pattern,
              $.dictionary_splat_pattern,
            ),
          ),
          ':',
          field('type', $.type),
        ),
      ),

    list_splat_pattern: ($) =>
      seq(
        '*',
        choice($.identifier, $.keyword_identifier, $.subscript, $.attribute),
      ),

    comptime_expression: ($) =>
      prec(PREC.call, seq('comptime', $.parenthesized_expression)),

    // The postfix transfer/consume operator, e.g. `result^`.
    transfer_expression: ($) =>
      prec(PREC.call, seq(field('value', $.primary_expression), '^')),

    not_operator: ($) =>
      prec(PREC.not, seq('not', field('argument', $.expression))),

    boolean_operator: ($) =>
      choice(
        prec.left(
          PREC.and,
          seq(
            field('left', $.expression),
            field('operator', 'and'),
            field('right', $.expression),
          ),
        ),
        prec.left(
          PREC.or,
          seq(
            field('left', $.expression),
            field('operator', 'or'),
            field('right', $.expression),
          ),
        ),
      ),

    binary_operator: ($) => {
      const table = [
        [prec.left, '+', PREC.plus],
        [prec.left, '-', PREC.plus],
        [prec.left, '*', PREC.times],
        [prec.left, '@', PREC.times],
        [prec.left, '/', PREC.times],
        [prec.left, '%', PREC.times],
        [prec.left, '//', PREC.times],
        [prec.right, '**', PREC.power],
        [prec.left, '|', PREC.bitwise_or],
        [prec.left, '&', PREC.bitwise_and],
        [prec.left, '^', PREC.xor],
        [prec.left, '<<', PREC.shift],
        [prec.left, '>>', PREC.shift],
      ];

      // @ts-ignore
      return choice(
        ...table.map(([fn, operator, precedence]) =>
          fn(
            precedence,
            seq(
              field('left', $.primary_expression),
              // @ts-ignore
              field('operator', operator),
              field('right', $.primary_expression),
            ),
          ),
        ),
      );
    },

    _not_in: (_) => seq('not', 'in'),

    _is_not: (_) => seq('is', 'not'),

    comparison_operator: ($) =>
      prec.left(
        PREC.compare,
        seq(
          $.primary_expression,
          repeat1(
            seq(
              field(
                'operators',
                choice(
                  '<',
                  '<=',
                  '==',
                  '!=',
                  '>=',
                  '>',
                  '<>',
                  'in',
                  alias($._not_in, 'not in'),
                  'is',
                  alias($._is_not, 'is not'),
                ),
              ),
              $.primary_expression,
            ),
          ),
        ),
      ),

    assignment: ($) =>
      seq(
        field('left', $._left_hand_side),
        choice(
          seq('=', field('right', $._right_hand_side)),
          seq(':', field('type', $.type), optional($.where_clause)),
          seq(
            ':',
            field('type', $.type),
            optional($.where_clause),
            '=',
            field('right', $._right_hand_side),
          ),
        ),
      ),

    variable_declaration: ($) => prec.dynamic(2, seq(
      'var',
      field('left', $._left_hand_side),
      choice(
        seq('=', field('right', $._right_hand_side)),
        seq(':', field('type', $.type), optional($.where_clause)),
        seq(
          ':',
          field('type', $.type),
          optional($.where_clause),
          '=',
          field('right', $._right_hand_side),
        ),
      ),
    )),

    _left_hand_side: ($) => choice($.pattern, $.pattern_list, $.string, $.call),

    _right_hand_side: ($) =>
      choice(
        $.expression,
        $.expression_list,
        $.assignment,
        $.augmented_assignment,
        $.pattern_list,
        $.yield,
        // A callable type as the value, e.g. `comptime F = def() -> None`.
        $.function_type,
      ),

    attribute: ($) =>
      prec(
        PREC.call,
        seq(
          field('object', $.primary_expression),
          '.',
          choice(
            field('attribute', choice(
              $.identifier,
              'var',
              'comptime',
              'ref',
              'read',
              'mut',
              'out',
              'deinit',
              'unified',
              'where',
            )),
            // A backtick-quoted MLIR member, e.g. the `pop.cast` in
            // ``__mlir_op.`pop.cast` ``.
            field('attribute', $.mlir_fragment),
          ),
        ),
      ),

    subscript: ($) =>
      prec(
        PREC.call,
        seq(
          field('value', $.primary_expression),
          '[',
          // Empty brackets are allowed for parametric instantiation, e.g.
          // `_CString[]`, where every parameter is inferred or defaulted.
          optional(seq(
            commaSep1(field('subscript', choice(
              $.expression,
              $.slice,
              $.keyword_argument,
              // A keyword argument whose value is a slice, e.g. `x[byte=1:n]`.
              alias($.slice_keyword_argument, $.keyword_argument),
              // A callable type argument, e.g. `Variant[def() -> Path]`.
              $.function_type,
              // A bare convention keyword used as a parameter argument, e.g.
              // the `mut` in `unsafe_mut_cast[mut]`.
              alias(choice('mut', 'out'), $.identifier),
            ))),
            optional(','),
          )),
          ']',
        ),
      ),

    slice: ($) =>
      seq(
        optional($.expression),
        ':',
        optional($.expression),
        optional(seq(':', optional($.expression))),
      ),

    call: ($) =>
      prec(
        PREC.call,
        seq(
          field('function', $.primary_expression),
          optional($.parameter_list),
          field('arguments', choice($.generator_expression, $.argument_list)),
        ),
      ),

    type: ($) => choice(
      prec(1, $.expression),
      $.generator_type,
      $.splat_type,
      $.generic_type,
      $.called_type,
      $.union_type,
      $.intersection_type,
      $.constrained_type,
      $.member_type,
      $.function_type,
    ),
    called_type: ($) => prec.right(PREC.call, seq(
      choice(
        $.generic_type,
        seq($.member_type, optional($.type_parameter)),
      ),
      $.argument_list,
      repeat(seq('.', $.identifier, optional($.type_parameter), optional($.argument_list))),
    )),
    // A callable type literal, e.g. `def(Int) raises -> Bool` or
    // `def() capturing -> Path`, usable anywhere a type is expected.
    generic_type: ($) => prec.dynamic(1, seq(
      choice(
        $.identifier,
        alias('type', $.identifier),
      ),
      $.type_parameter,
    )),
    constrained_type: ($) => prec.right(seq($.type, ':', $.type)),
